<?xml version="1.0"?>
<package format="2">
  <name>arm_hybrid_controller</name>
  <version>0.0.0</version>
  <description>for cobot control.</description>
  <maintainer email="liusiyang.cn@gmail.com">Siyang Liu</maintainer>
  <license>BSD</license>
  <author email="liusiyang.cn@gmail.com">Siyang Liu</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

  <depend>controller_interface</depend>
  <depend>effort_controllers</depend>
  <depend>realtime_tools</depend>
  <depend>pluginlib</depend>
  <depend>arm_common</depend>

  <export>
    <controller_interface plugin="${prefix}/arm_hybrid_controller_plugins.xml"/>
  </export>

</package>
